[package]
name = "netkitten"
version = "0.1.0"
authors = ["Daniel KT <dan@distrosync.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
bench = false
path = "src/main.rs"
name = "nk"

[dependencies]
structopt = "0.3.21"
